# TestingExample

./: App.qml  CMakeLists.txt  ProjectResources.qrc  QMLDialog.cpp  QMLDialog.h  Screen01.ui.qml  main.cpp
TestingExample/: CMakeLists.txt
TestingExample/CustomComponents/: CustomButton.qml  Resources.qrc
_Tests/: CMakeLists.txt  setup.cpp  setup.h  tst_test.qml
src/: App.qml  CMakeLists.txt  Resources.qrc  Screen01.ui.qml  TestingExample.h  main.qml
src/CustomComponents/: CustomButton.qml  qmldir
